# smart-mobility-dashboard-c

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  devfile.yaml
e2e-test/: DashboardE2ETest.cpp  WebDriver.cpp  WebDriver.h
include/: VehicleResource.h  VehicleService.h  VehicleState.h
public/: index.html
public/css/: dashboard.css
public/js/: dashboard.js
src/: VehicleResource.cpp  VehicleService.cpp  VehicleState.cpp  main.cpp
tekton/: e2e-and-pr-pipeline.yaml  e2e-trigger-template.yaml
test/: VehicleResourceTest.cpp  VehicleServiceTest.cpp  VehicleStateTest.cpp
